[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/Weapons.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Drop.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=5]
radius = 31.7186

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Sword",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Ram",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Hammer",
"speed": 5.0
} ]

[node name="Drop" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Blade1" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Blade1"]
frames = SubResource( 4 )
animation = "Ram"

[node name="Blade2" type="Node2D" parent="."]
position = Vector2( 0, 32 )
rotation = 3.14159

[node name="AnimatedSprite" type="AnimatedSprite" parent="Blade2"]
frames = SubResource( 4 )
animation = "Sword"
[connection signal="body_entered" from="." to="." method="_on_Drop_body_entered"]
